add exchangeCodeForToken and getUserProfile utils, user.js step 1

--- a/.env-example copy
+++ b/.env-example copy
@@ -1,5 +1,5 @@
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
 
-GITHUB_CLIENT_SECRET=c74f0bbdedf6461c4fced31cda257ee60c560630
+GITHUB_CLIENT_SECRET=
 GITHUB_REDIRECT_URI=http://localhost:7890/api/v1/auth/login/callback
 GITHUB_CLIENT_ID=cd879d587ab28ec1d7f0
